objects/Email_Content__c.object
<CustomObject>
    <description>Holds the body (template) of mass emails for participants and volunteers.</description>
    <fields>
        <fullName>Body__c</fullName>
        <description>This is the content of the email. The part that will be the same for all the emails in this type of campaign.</description>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <description>This Email will be used for this type of campaign.</description>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Adv_Camp_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>For_Participants__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The email is intended for participants</description>
        <label>For Participants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>For_Volunteers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The email is intended for Volunteers</description>
        <label>For Volunteers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>The subject of the email to be sent</description>
        <label>Subject</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Email__c</fullName>
        <description>Specifies if the email is a reminder to be sent before the campaign or if it is an after-campaign email.</description>
        <label>Type of Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reminder Emails</fullName>
                    <default>true</default>
                    <label>Reminder Emails</label>
                </value>
                <value>
                    <fullName>After Campaign Emails</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email_Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campaign_Type__c</columns>
        <columns>For_Participants__c</columns>
        <columns>For_Volunteers__c</columns>
        <columns>Type_of_Email__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Email_Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email_Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>